--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-API_KEY="AIzaSyDOGMGkjh8e2YNUgcfzOkHER1q7Du4hrKY"
+ API_KEY="AIzaSyDHeWRBsJRPfSfOFtQv51juXD7cSmro1x4"
 SECRET_KEY='1729'
+
+# apikeys:AIzaSyC8nj4WjEgXIPK-jORZu5m-OMhfxtttMRY
+# apikeys:AIzaSyDHeWRBsJRPfSfOFtQv51juXD7cSmro1x4
