--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
- API_KEY="AIzaSyCk-1Jm2uSTq3rPf_9Za4PZKokbPLBz5fI"
+ API_KEY="AIzaSyDHeWRBsJRPfSfOFtQv51juXD7cSmro1x4"
 SECRET_KEY='1729'
+EMAIL_PASS="gakx zapx wagp nrsg"
+EMAIL_USER="suryaprabha.hackathon@gmail.com"
